<resources>
    <string name="app_name">"Fresh Hub"</string>
    <string name="closed" translatable="false">"closed"</string>
    <string name="opend" translatable="false">"opend"</string>
    <string name="sesl_switch">"Switch"</string>
    <string name="sesl_switchbar_off_text">"Off"</string>
    <string name="sesl_switchbar_on_text">"On"</string>
    <string name="sesl_font_family_regular" translatable="false">"sec-roboto-light"</string>
    <string name="freshrom" translatable="false">"FreshRom"</string>
    <string name="main_update_available">"An update is available"</string>
    <string name="main_update_finished">"Download complete"</string>
    <string name="main_no_update_available">"No updates available"</string>
    <string name="main_update_filename">"Filename"</string>
    <string name="main_update_progress">"Download Progress"</string>
    <string name="main_website">"Website"</string>
    <string name="main_website_summary">"Visit the official Fresh website"</string>
    <string name="main_donate">"Donate"</string>
    <string name="main_donate_summary">"Help out the developer(s) of this ROM!"</string>
    <string name="main_tap_to_download">"Tap to download"</string>
    <string name="main_download_completed_details">"Tap for details"</string>
    <string name="main_tap_to_view_progress">"Tap to view progress"</string>
    <string name="main_last_checked">"Last checked"</string>
    <string name="main_addon">"Addons"</string>
    <string name="main_addon_summary">"Extend your Fresh experience!"</string>
    <string name="main_rom_information">"About your device"</string>
    <string name="main_ota_information">"Software update information"</string>
    <string name="main_rom_name">"System name:"</string>
    <string name="main_rom_version">"Release version:"</string>
    <string name="main_rom_codename">"ROM codename:"</string>
    <string name="main_rom_build_date">"Build date:"</string>
    <string name="main_android_version">"Android version:"</string>
    <string name="main_rom_spl">"Security patch level:"</string>
    <string name="main_rom_developer">"Maintainer(s):"</string>
    <string name="main_ota_version">"Version:"</string>
    <string name="main_ota_size">"Size:"</string>
    <string name="main_not_compatible_title">"Hold on!"</string>
    <string name="main_not_compatible_message">"The current ROM set up is not configured to run with FreshApp. Please contact the ROM maintainer to fix this issue."</string>
    <string name="main_not_connected_title">"Not connected"</string>
    <string name="main_not_connected_message">"You are not connected to any network. Please enable Mobile Network or WiFi and try again."</string>
    <string name="main_playstore_title">"BitCoin"</string>
    <string name="main_playstore_message">"You do not have any available apps to handle the \"bitcoin:\" mime-type.

Would you like to search the Google Play Store to find one?"</string>
    <string name="main_button_icon">"Button icon"</string>
    <string name="main_dev_website_icon">"Developer Website Icon"</string>
    <string name="main_actionbar_button">"Actionbar Buttons"</string>
    <string name="main_release_ignored">"Release skipped."</string>
    <string name="cancel">"Cancel"</string>
    <string name="ok">"OK"</string>
    <string name="delete">"Delete"</string>
    <string name="back">"Back"</string>
    <string name="help">"Help"</string>
    <string name="loading">"Loading…"</string>
    <string name="filename_separator" translatable="false">"-"</string>
    <string name="download">"Download"</string>
    <string name="install">"Install"</string>
    <string name="downloading">"Downloading…"</string>
    <string name="rebooting">"Rebooting…"</string>
    <string name="information">"Information"</string>
    <string name="update_available">"ROM update available"</string>
    <string name="ignore">"Ignore"</string>
    <string name="donate">"Donate"</string>
    <string name="finished">"Finished"</string>
    <string name="settings">"Settings"</string>
    <string name="done">"Done"</string>
    <string name="delete_confirm">"Are you sure you want to delete this file?"</string>
    <string name="permission_not_granted_dialog_title">"Permissions not granted"</string>
    <string name="permission_not_granted_dialog_message">"Please grant FreshApp storage permissions or the app will not function!"</string>
    <string name="dialog_ok">"OK"</string>
    <string name="about_title">"About FreshApp"</string>
    <string name="about_preferences_summary">"The contributors that worked on this app!"</string>
    <string name="about_credits_matt" translatable="false">"Matt Booth (MattBooth)"</string>
    <string name="about_credits_matt_link" translatable="false">"https://github.com/MatthewBooth/"</string>
    <string name="about_credits_nicholas" translatable="false">"Nicholas Chum (nicholaschum)"</string>
    <string name="about_credits_nicholas_link" translatable="false">"https://github.com/nicholaschum/"</string>
    <string name="about_credits_title">"Credits"</string>
    <string name="about_credits_summary">"Credits Summary"</string>
    <string name="about_version_title">"Version"</string>
    <string name="about_app_version">"App version:"</string>
    <string name="changelog">"Server Changelog"</string>
    <string name="changelog_summary">"View the app's changelog"</string>
    <string name="changelog_error">"Error reading changelog"</string>
    <string name="menu_settings">"Settings"</string>
    <string name="menu_info">"Server Changelog"</string>
    <string name="addons_created_on">"Created:"</string>
    <string name="addons_updated_on">"Updated:"</string>
    <string name="available_update_downloading">"Downloading update…"</string>
    <string name="available_update_install_info">"Update your phone and get new features"</string>
    <string name="available_update_install_info_desc">"Using mobile data to download may result in additional charges. Using Wi-Fi is recommended."</string>
    <string name="available_update_install_ready">"Fresh %1$s is ready to install"</string>
    <string name="available_update_name">"Update name and file info here"</string>
    <string name="available_progress_counter">"0MB / 0MB"</string>
    <string name="available_time_remaining">"Time Left: %s"</string>
    <string name="available_download_speed">"%d kb/s"</string>
    <string name="available_changelog_title">"Changelog"</string>
    <string name="available_changelog_content">"Your Changelog goes here"</string>
    <string name="available_md5" translatable="false">"MD5:"</string>
    <string name="available_changelog">"Changelog"</string>
    <string name="available_check_md5">"Check MD5"</string>
    <string name="available_ready_to_install">"Ready to install"</string>
    <string name="available_md5_ok">"MD5 Matched"</string>
    <string name="available_md5_failed">"MD5 Failed"</string>
    <string name="available_checking_md5">"Checking MD5…"</string>
    <string name="available_downloading">"Downloading…"</string>
    <string name="are_you_sure">"Are you sure?"</string>
    <string name="available_delete_confirm_message">"Are you sure you want to delete the downloaded file?"</string>
    <string name="available_reboot_confirm">"Would you like to reboot now?"</string>
    <string name="available_url_error">"URL Error: Please see your ROM developer"</string>
    <string name="available_reboot_manual_title">"Please reboot now"</string>
    <string name="available_reboot_manual_message">"Please reboot to recovery and flash your ROM.

You can find it in /sdcard/Downloads"</string>
    <string name="available_wrong_network_title">"Wrong network selected"</string>
    <string name="available_wrong_network_message">"You are trying to download over your mobile network, and the settings only allow Wi-Fi. Please change the settings accordingly."</string>
    <string name="preferences_name">"Settings"</string>
    <string name="download_folder" translatable="false">"/storage/emulated/0/Download"</string>
    <string name="list_summary" translatable="false">"%s"</string>
    <string name="twrp_ors_cat" translatable="false">"OpenRecoveryScript"</string>
    <string name="twrp_ors_title">"Enable OpenRecoveryScript"</string>
    <string name="twrp_ors_summary">"Enable auto flashing of the downloaded update."</string>
    <string name="twrp_ors_delete_after">"Delete after install"</string>
    <string name="twrp_ors_delete_after_summary">"Should the script remove the update after updating?"</string>
    <string name="twrp_ors_install_prefs">"OpenRecoveryScript Configuration"</string>
    <string name="twrp_ors_install_prefs_summary">"Configure OpenRecoveryScript installation preferences"</string>
    <string name="twrp_ors_wipe_data">"Wipe Data"</string>
    <string name="twrp_ors_wipe_cache">"Wipe Cache"</string>
    <string name="twrp_ors_wipe_dalvik">"Wipe Dalvik"</string>
    <string name="notifications_title">"Notifications"</string>
    <string name="background_service_summary">"Automatically check for updates and show a notification if one is available"</string>
    <string name="background_frequency">"Update check frequency"</string>
    <string name="background_30mins">"30 mins"</string>
    <string name="background_60mins">"60 mins"</string>
    <string name="background_2hours">"2 hours"</string>
    <string name="background_3hours">"3 hours"</string>
    <string name="background_6hours">"6 hours"</string>
    <string name="background_12hours">"12 hours"</string>
    <string name="background_24hours">"Once a day"</string>
    <string name="background_2days">"Every two days"</string>
    <string name="background_3days">"Every three days"</string>
    <string name="background_7days">"Once a week"</string>
    <string name="theme_title">"App Theme"</string>
    <string name="mobile_wifi_network">"Network"</string>
    <string name="mobile_wifi_title">"Update over network"</string>
    <string name="wifi_network_only">"Wi-Fi only"</string>
    <string name="mobile_or_wifi">"Mobile Network or Wi-Fi"</string>
    <string name="theme">"Selected Theme"</string>
    <string name="theme_config">"Theme Configuration"</string>
    <string name="theme_dark">"Material Dark"</string>
    <string name="theme_light">"Material Light"</string>
    <string name="notifications_sound">"Sound"</string>
    <string name="notifications_vibrate">"Vibrate"</string>
    <string name="silent_ringtone">"Silent"</string>
    <string name="notification_ignore_release_title">"Skip update"</string>
    <string name="notification_ignoring_release">"Currently skipping version:"</string>
    <string name="notification_not_ignoring_release">"You are not skipping any updates"</string>
    <string name="system_name">"Fresh"</string>
    <string name="display_dashboard_summary">"FreshROM updates"</string>
    <string name="OTA_SWUPDATE_PROP_CODE" translatable="false">"ro.fresh.ota.api"</string>
    <string name="ota_swupdate_prop_api_url" translatable="false">"ro.fresh.ota.api"</string>
    <string name="ota_swupdate_prop_date" translatable="false">"ro.system.build.date"</string>
    <string name="ota_swupdate_prop_release" translatable="false">"ro.fresh.version"</string>
    <string name="ota_swupdate_prop_version" translatable="false">"ro.fresh.build.version"</string>
    <string name="ota_swupdate_prop_branch" translatable="false">"ro.fresh.build.branch"</string>
    <string name="system_settings_plugin_title">"Software update"</string>
    <string name="system_settings_plugin_summary">"Device updates  •  Download addons"</string>
    <string name="system_settings_resolution_plugin_title">"Screen resolution"</string>
    <string name="feedback">"Feedback"</string>
    <string name="omc_request">"OMC Request"</string>
    <string name="update" translatable="false">@string/app_name</string>
    <string name="fresh_updates">"Fresh Updates"</string>
    <string name="reboot">"Reboot"</string>
</resources>