<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Open Recovery Script -->
    <PreferenceCategory
        android:key="updater_ors_screen_title"
        android:title="@string/twrp_ors_cat" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="updater_twrp_ors"
        android:summary="@string/twrp_ors_summary"
        android:title="@string/twrp_ors_title" />

    <Preference
        android:dependency="updater_twrp_ors"
        android:key="install_prefs"
        android:summary="@string/twrp_ors_install_prefs_summary"
        android:title="@string/twrp_ors_install_prefs" />

    <!-- Background update service -->
    <PreferenceCategory
        android:key="updater_ors_screen_title"
        android:title="@string/notifications_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="background_service"
        android:summary="@string/background_service_summary"
        android:title="@string/notifications_title" />

    <ListPreference
        android:defaultValue="43200"
        android:dependency="background_service"
        android:entries="@array/updater_background_frequency_entries"
        android:entryValues="@array/updater_background_frequency_values"
        android:key="background_frequency"
        android:summary="@string/list_summary"
        android:title="@string/background_frequency" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="background_service"
        android:key="notifications_sound"
        android:ringtoneType="notification"
        android:title="@string/notifications_sound" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="background_service"
        android:key="notifications_vibrate"
        android:title="@string/notifications_vibrate" />
    <SwitchPreference
        android:defaultValue="false"
        android:dependency="background_service"
        android:key="notifications_ignored_release"
        android:title="@string/notification_ignore_release_title" />

    <!-- Network Settings -->
    <PreferenceCategory
        android:key="updater_updater_mobile_wifi_network_cat"
        android:title="@string/mobile_wifi_network" />

    <ListPreference
        android:defaultValue="2"
        android:entries="@array/updater_network_entries"
        android:entryValues="@array/updater_network_values"
        android:key="network_type"
        android:summary="@string/list_summary"
        android:title="@string/mobile_wifi_title" />

    <!-- App Theme -->
    <PreferenceCategory
        android:key="updater_theme_cat"
        android:title="@string/theme_title" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:key="current_theme"
        android:summary="@string/list_summary"
        android:title="@string/theme" />

    <!-- About -->
    <PreferenceCategory
        android:key="settings_about"
        android:title="@string/app_name" />

    <Preference
        android:key="about_activity_pref"
        android:summary="@string/about_preferences_summary"
        android:title="@string/about_title" />


</PreferenceScreen>