<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        android:clickable="false"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_rom_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rom_information" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_rom_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rom_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_rom_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rom_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_rom_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rom_build_date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_android_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_android_version" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_main_rom_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_rom_developer" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>