<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_marginHorizontal="80dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle.Invert"
            android:id="@+id/menu_available_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/download" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle.Invert"
            android:id="@+id/menu_available_install"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/install" />

        <com.google.android.material.button.MaterialButton
            android:visibility="gone"
            android:id="@+id/menu_available_changelog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_changelog" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle.Invert.Secondary"
            android:id="@+id/menu_available_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <com.google.android.material.button.MaterialButton
            style="@style/ButtonStyle.Invert.Secondary"
            android:id="@+id/menu_available_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_available_check_md5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/available_check_md5" />

    </LinearLayout>

</LinearLayout>