<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@mipmap/ic_launcher" />
        <!--app:srcCompat="@mipmap/ic_launcher"-->

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30dp" />


    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <de.dlyt.yanndroid.samsung.drawer.OptionGroup
                android:id="@+id/optionGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectedOptionButton="@id/drawer_update">

                <de.dlyt.yanndroid.samsung.drawer.OptionButton
                    android:id="@+id/drawer_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_system_update"
                    app:text="@string/update" />

                <de.dlyt.yanndroid.samsung.drawer.OptionButton
                    android:id="@+id/drawer_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_feedback"
                    app:text="@string/feedback" />

                <de.dlyt.yanndroid.samsung.drawer.OptionButton
                    android:id="@+id/drawer_omc_request"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/ic_request"
                    app:text="@string/omc_request" />


            </de.dlyt.yanndroid.samsung.drawer.OptionGroup>


            <View style="@style/DrawerDividerStyle" />

            <de.dlyt.yanndroid.samsung.drawer.OptionButton
                android:id="@+id/drawer_fresh_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_drawer_telegram"
                app:text="@string/fresh_updates" />

            <de.dlyt.yanndroid.samsung.drawer.OptionButton
                android:id="@+id/drawer_github_issues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_drawer_github"
                app:text="@string/drawer_github_link" />

            <View style="@style/DrawerDividerStyle" />


            <de.dlyt.yanndroid.samsung.drawer.OptionButton
                android:id="@+id/drawer_reboot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_refresh"
                app:text="@string/reboot" />


            <de.dlyt.yanndroid.samsung.drawer.OptionButton
                android:id="@+id/drawer_renoir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_palette"
                app:text="Renoir" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>